add_executable(Offer04 Offer04.cpp)
add_executable(P106 P106.cpp)
add_executable(Offer05 Offer05.cpp)
add_executable(Offer22 Offer22_stack.cpp)
add_executable(Offer22_better Offer22_double_ptr.cpp)
add_executable(Offer07 Offer07.cpp)
add_executable(P113 P113.cpp)
add_executable(Offer53_2 Offer53_2.cpp)
add_executable(P771 P771.cpp)
add_executable(Offer58_1 Offer58_1.cpp)
add_executable(Offer58_1_better Offer58_1_better.cpp)
add_executable(Offer58_1_steam Offer58_1_steam.cpp)
add_executable(Offer50 Offer50.cpp)
add_executable(P2 P2.cpp)
add_executable(P226 P226.cpp)
add_executable(P116 P116.cpp)
add_executable(P834 P834.cpp)
add_executable(P114 P114.cpp)
add_executable(P1002 P1002.cpp)
add_executable(P234 P234.c)
add_executable(P14 P14.c)
add_executable(P20 P20.c)
add_executable(P21 P21.c)
add_executable(P1024 P1024.c)
add_executable(P27 P27.c)
add_executable(P1024_greedy P1024_greedy.c)
add_executable(P50 P50.c)
add_executable(P845 P845.c)